[tool.poetry]
name = "nightcrawler"
version = "0.1.0"
description = "Documentation Crawler Automation"
authors = ["Javie Onglao <starpogi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
PyYAML = "^5.3.1"
camelot-py = "^0.8.2"
opencv-python = "^4.5.1"
matplotlib = "^3.3.3"
excalibur-py = "^0.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
